--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.ejs') %> 
 <%- include('partials/navbar.ejs') %>
+<%- include('partials/tempNav.ejs') %>
 
+<h1>HOME PAGE</h1>
+<a href="/privacy-policy">PRIVACY POLICY LINK</a>
 
-<h1>
-    HOME PAGE
-</h1>   
- <a href="/privacy-policy">PRIVACY POLICY LINK</a>
-
-<br>
- <a href="/steam-login">
-    <button>STEAM LOGIN</button>
-  </a>
-<br>
-  <a href="/alt-login">
-    <button>ALT LOGIN</button>
-  </a>
+<br />
+<div>
+    <a href="/steam-login">
+      <button>STEAM LOGIN</button>
+    </a>
+    <br />
+    <a href="/alt-login">
+      <button>ALT LOGIN</button>
+    </a>
+</div>
