--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,12 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
-<h1>HOME PAGE</h1>
-<a href="/privacy-policy">PRIVACY POLICY LINK</a>
-
-<br />
-<div>
+<div class="background-box">
+    <h1>HOME PAGE</h1>
+    <a href="/privacy-policy">PRIVACY POLICY LINK</a>
+    <br>
     <a href="/steam-login">
-      <button>STEAM LOGIN</button>
+        <button>STEAM LOGIN</button>
     </a>
     <br />
     <a href="/alt-login">
