--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -1,5 +1,7 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/navbar.ejs') %>
+<%- include('partials/tempNav.ejs') %>
+
 <h1>
     ALT LOGIN PAGE
 </h1>
