--- a/views/room-choice.ejs
+++ b/views/room-choice.ejs
@@ -1,5 +1,7 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/navbar.ejs') %>
+<%- include('partials/tempNav.ejs') %>
+
 <h1>
    CREATE/JOIN ROOM PAGE
 </h1>
