Updated Boxes on Pages, Metadata, and CSS

--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -2,15 +2,16 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
-<h1>
-    ALT LOGIN PAGE
-</h1>
-
-
-<label for="user-id">Steam User ID OR ID Code</label>
-<br>
-<input type="text" id="user-id" name="user-id">
-<br>
-<a href="/room-choice">
-    <button>CREATE/JOIN ROOM</button>
-</a>
+<div class="background-box">
+    <h1>
+        ALT LOGIN PAGE
+    </h1>
+    <br>
+    <label for="user-id">Steam User ID OR ID Code</label>
+    <br>
+    <input type="text" id="user-id" name="user-id">
+    <br>
+    <a href="/room-choice">
+        <button>CREATE/JOIN ROOM</button>
+    </a>
+</div>
