--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -2,6 +2,8 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
-<h1>
-    PRIVACY POLICY PAGE
-</h1>
+<div class="background-box">
+    <h1>
+        PRIVACY POLICY PAGE
+    </h1>
+</div>
