--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,18 @@ h2 {
     color: white;
 }
 
+a {
+    color:white;
+}
+
+a:hover {
+    color:#9FE544;
+}
+
+label {
+    color: white;
+}
+
 button {
     font-family: 'Kanit', sans-serif;
     background-color: #6F9F31;
@@ -18,6 +30,19 @@ button {
     padding: 1vh 2vw;
     font-size: large;
     border: none;
+    /* Key for Lift Off effect */
+    transition: all .3s ease-in-out;
+}
+
+button:hover {
+    /* the 3D transform here is key to the effect */
+    transform: translate3d(0px, -1px, 0px);
+    /* this stronger shadow sells that the card is being lifted up */
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#main-page-buttons {
+    margin-top: 2rem;
 }
 
 .background-box {
