--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,16 @@
 
 <div class="background-box">
     <h1>HOME PAGE</h1>
-    <a href="/privacy-policy">PRIVACY POLICY LINK</a>
     <br>
+    <a href="/privacy-policy">PRIVACY POLICY LINK</a>
+</div>
+
+<div id="main-page-buttons">
     <a href="/steam-login">
         <button>STEAM LOGIN</button>
     </a>
-    <br />
+    <p style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
     <a href="/alt-login">
-      <button>ALT LOGIN</button>
+        <button>ALT LOGIN</button>
     </a>
 </div>
