--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Express</title>
+    <title>What Can We Play?</title>
+    <!-- TODO: Add Icon for Tab Bar -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel = "stylesheet" href="/css/styles.css" />
