--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,11 @@
 <nav>
     <!-- TODO: Back Button could be an alternate partial maybe? -->
     <!-- TODO: Figure out how to use Vector here instead of PNG -->
+    <!-- <img
+      id="logo"
+      alt="What Can We Play Today Logo"
+      src="/img/VecLogo.svg"
+    /> -->
     <img
       id="logo"
       alt="What Can We Play Today Logo"
