--- a/views/steam-login.ejs
+++ b/views/steam-login.ejs
@@ -2,17 +2,19 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
-<h1>
-    STEAM LOGIN PAGE
-</h1>
-
-<a href="/auth/steam">
-    <button> Log In </button>
-</a>
-
-<a href="/room-choice">
-    <button>CREATE/JOIN ROOM</button>
-</a>
+<div>
+    <h1>
+        STEAM LOGIN PAGE
+    </h1>
+    
+    <a href="/auth/steam">
+        <button> Log In </button>
+    </a>
+    
+    <a href="/room-choice">
+        <button>CREATE/JOIN ROOM</button>
+    </a>
+</div>
 
 <script>
 </script>
