--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -2,8 +2,19 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
-<div class="background-box">
-    <h1>
-        PRIVACY POLICY PAGE
-    </h1>
+<div class="gradient-background">
+    <div class="background-box">
+        <h1>
+            PRIVACY POLICY PAGE
+        </h1>
+        <p style="color: white;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
+tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
+        </p>
+    </div>
 </div>
