--- a/views/empty-room.ejs
+++ b/views/empty-room.ejs
@@ -30,7 +30,7 @@
         <script>
             // window.onload = sendMessage();
             // TODO: Remember the WAN IP when using LiveShare.
-            const socket = io('http://63.249.99.174:31905'); //config.url
+            const socket = io('http://localhost:3000'); //config.url
             socket.on('connection');
             
             socket.on('connection', () => {
