Reworked Back-End Game Generation List

--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -12,7 +12,7 @@
         <!-- TODO: Have a guide on how to find it. -->
         <!-- TODO: Have some disclaimer and a link to other pages on relevant information -->
         <br>
-        <form method="post" action="/empty-room">
+        <form method="post" action="/alt-login">
             <br>
             <input type="text" id="userId" name="userId">
             <br>
