Fixed steam login button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@ tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, </p>
         <a href="/privacy-policy">PRIVACY POLICY LINK</a>
     </div>
     <div id="main-page-buttons">
-        <a href="/steam-login">
+        <a href="/auth/steam">
             <button>STEAM LOGIN</button>
         </a>
         <p style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
