Mid Room Number work

--- a/views/room-choice.ejs
+++ b/views/room-choice.ejs
@@ -10,9 +10,10 @@
     <form action="/room-choice" method="post">
         <input type="hidden" name="role" value="Host">
         <button type = "submit" style = "margin: 5px;"> Create Room </button>
+        
     </form>
 
-    <form action="/room-choice" method="post">
+    <form action="/join-room" method="get">
         <input type="hidden" name="role" value="Member">
         <button type = "submit" style = "margin: 5px;"> Join Room </button>
     </form>
