added game images to frontend

--- a/views/join-room.ejs
+++ b/views/join-room.ejs
@@ -2,20 +2,20 @@
 <%- include('partials/navbar.ejs') %>
 <%- include('partials/tempNav.ejs') %>
 
+<div id="form">
 <form name="join" method="post" action="/join-room" onsubmit="return check()">
     <br>
     <input type="text" id="roomnum" name="roomnum">
     <br>
     <button type="submit">JOIN ROOM</button>
 </form>
+</div>
 
 <script> 
     function check(){
-        var roomnumber = document.forms["join"]["roomnum"].value;
-
-        if(roomnumber.length != 5){
-            alert("Please enter a valid room number!");
-            return false;
+        var roomNumber = document.forms["join"]["roomnum"].value;
+        if (!'<%= existingRooms %>'.includes(roomNumber)) {
+            alert("Room number doesn't exist");
         }
     }
 </script>
